fixed extra white space between header and side, chanaged newsletter route from get to post so it send data

--- a/application/prototypes/horizontalPrototype/public/css/index.css
+++ b/application/prototypes/horizontalPrototype/public/css/index.css
@@ -136,7 +136,6 @@ nav ul li a {
     padding: 20px;
     /* position: fixed;
     bottom: 0; */
-    width: 100%;
     border-top: 1px solid whitesmoke;
     margin-top: auto;
 }
